MDEV-9635: Server crashes in part_of_refkey  or assertion `!created && key_to_save < (int)s->keys' failed in TABLE::use_index(int) or with join_cache_level>2

Do not try to create index where ref is for hash join.